<resources>
    <string name="app_name">CovidOut</string>
    <string name="title_home">Beranda</string>
    <string name="title_explore">Telusuri</string>
    <string name="title_maps">Peta</string>
    <string name="province_case">Data Kasus per Provinsi</string>
    <string name="indonesia_case">Data Kasus di Indonesia</string>
    <string name="recover">Sembuh</string>
    <string name="death">Meninggal</string>
    <string name="confirmed">Kasus Dikonfirmasi</string>
    <string name="case_development">Perkembangan Kasus di Indonesia</string>
    <string name="what_should_i_do">Apa Yang Harus Saya Lakukan?</string>
    <string name="case_per_day">Jumlah Kasus per Hari</string>
    <string name="active_case">Kasus Aktif</string>
    <string name="average_case">Rata-Rata Kasus Baru Per Hari</string>
    <string name="home_caption">Di wilayah provinsi kamu terdapat kasus Covid-19 sebagai berikut :</string>
    <string name="cases">Kasus</string>
    <string name="learn_caption">Ayo kita bersama-sama lawan virus Corona!</string>
    <string name="know_more">Kenali lebih jauh apa itu virus Corona / Covid-19</string>
    <string name="learn">Pelajari</string>
    <string name="learn_caption_body">Kenali, cegah, dan hindari virus Corona agar kamu dan keluarga kamu tidak tertular virus Corona.\n Anda juga bisa lakukan pemeriksaan mandiri di aplikasi ini.</string>
    <string name="info">Info</string>
    <string name="news">Berita</string>

    <string name="news_feed">Berita Terbaru</string>
    <string name="province_data">Data Provinsi</string>
    <string name="advance_data">Informasi Lanjut</string>
    <string name="city_data">Data Kabupaten dan Kota</string>
    <string name="search">Cari Daerah</string>
    <string name="international_data">Data Internasional</string>
    <string name="province_not_found">Provinsi Tidak Ditemukan</string>
    <string name="city_not_found">Kota Atau Kabupaten Tidak Ditemukan</string>
    <string name="global_data">Data Kasus Covid-19 Global</string>
    <string name="case_by_country">Data Kasus Berdasarkan Negara</string>
    <string name="zero">0</string>
    <string name="personal_check">Saya Ingin Periksa Mandiri</string>
    <string name="covidout">#CovidOut</string>
    <string name="together">Bersama Lawan Corona</string>
    <string name="case_province">Kasus Provinsi</string>
    <string name="close">Tutup</string>
    <string name="website">Website Informasi Covid-19</string>
    <string name="not_available">Belum Tersedia</string>
    <string name="maps_google">Peta Sebaran by Google</string>
    <string name="case_country">Informasi Kasus Covid-19 Negara</string>
    <string name="recover_rate">Persentase Sembuh</string>
    <string name="death_rate">Persentase Kematian</string>
    <string name="case_dev">Perkembangan Kasus</string>
</resources>
