<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_receipt_black_24dp"
        android:title="@string/news" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="@string/info" />

</menu>
