<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="10dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/know_more"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/colorSemiMuted" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLearn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/learn"
            android:textColor="@color/colorPrimary"
            android:letterSpacing="0"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:backgroundTint="@android:color/white" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>