<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="12dp"
    android:orientation="vertical"
    app:cardCornerRadius="6dp"
    app:cardElevation="0dp"
    app:strokeColor="@color/colorSemiMuted"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="6dp"
            android:background="@color/colorPrimary">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="@tools:sample/cities" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/confirmed" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCaseTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            tools:text="@tools:sample/us_zipcodes" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/recover" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvRecoverTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            tools:text="@tools:sample/us_zipcodes" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/death" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDeathTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            tools:text="@tools:sample/us_zipcodes" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>