<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/colorPrimary"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_place_black_24dp"
                    android:drawablePadding="4dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_toStartOf="@id/btnRefreshLocation"
                    android:layout_alignParentStart="true"
                    tools:text="@tools:sample/cities" />

                <ImageButton
                    android:id="@+id/btnRefreshLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_refresh_black_24dp"
                    android:background="@color/colorPrimary"
                    android:layout_alignParentEnd="true"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:letterSpacing="0"
                    android:text="@string/what_should_i_do"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    app:backgroundTint="@android:color/white"
                    app:cornerRadius="12dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-25dp"
                android:background="@drawable/shape_round_white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/indonesia_case"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/colorSemiMuted"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvCaseTotalID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="30sp"
                            tools:text="1980" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/confirmed"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvLastUpdate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            tools:text="@tools:sample/date/ddmmyy" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dip"
                        android:layout_height="100dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="0.48"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="0dp"
                        app:strokeColor="@color/colorSemiMuted"
                        app:strokeWidth="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvRecoverID"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="30sp"
                                tools:text="190" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/recover"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvRecoverRateID"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                tools:text="8%" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dip"
                        android:layout_height="100dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="0.48"
                        app:cardBackgroundColor="@android:color/white"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="0dp"
                        app:strokeColor="@color/colorSemiMuted"
                        app:strokeWidth="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvDeathID"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/black"
                                android:textSize="30sp"
                                tools:text="210" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/death"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tvDeathRateID"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                tools:text="8%" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorSemiMuted" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/case_development"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <com.anychart.AnyChartView
                    android:id="@+id/chartDevelopment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorSemiMuted" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/case_per_day"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <com.anychart.AnyChartView
                    android:id="@+id/chartCasePerDay"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorSemiMuted" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/province_case"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCaseProvince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_case_by_province" />

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>